<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/bottomNav" android:layout_width="match_parent" android:layout_height="@dimen/bottom_nav_height" android:orientation="horizontal" android:gravity="center" android:paddingStart="@dimen/bottom_nav_content_padding_horizontal" android:paddingEnd="@dimen/bottom_nav_content_padding_horizontal" android:paddingTop="@dimen/bottom_nav_content_padding_top" android:paddingBottom="@dimen/bottom_nav_content_padding_bottom" android:background="@drawable/bg_bottom_nav" android:elevation="@dimen/elevation_none">
<TextView style="@style/Widget.MyFitAI.BottomNavItem" android:id="@+id/navHome" android:drawableTop="@drawable/ic_nav_home" android:text="@string/nav_home" android:contentDescription="@string/nav_home" />
 <TextView style="@style/Widget.MyFitAI.BottomNavItem" android:id="@+id/navFood" android:drawableTop="@drawable/ic_nav_food" android:text="@string/nav_food" android:contentDescription="@string/nav_food_cd" />
  <TextView style="@style/Widget.MyFitAI.BottomNavItem" android:id="@+id/navProgress" android:drawableTop="@drawable/ic_nav_progress" android:text="@string/nav_progress" android:contentDescription="@string/nav_progress_cd" />
 <TextView style="@style/Widget.MyFitAI.BottomNavItem" android:id="@+id/navAi" android:drawableTop="@drawable/ic_nav_ai" android:text="@string/nav_ai" android:contentDescription="@string/nav_ai" />
 <TextView style="@style/Widget.MyFitAI.BottomNavItem" android:id="@+id/navMore" android:drawableTop="@drawable/ic_nav_more" android:text="@string/nav_more" android:contentDescription="@string/nav_more" />
</LinearLayout>
