<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Widget.MyFitAI.Dialog.Content">

    <TextView
        style="@style/Text.MyFitAI.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications_dialog_description"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/mealRemindersSwitch"
        style="@style/Widget.MyFitAI.SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:text="@string/notifications_meal_reminders"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/weeklyReviewSwitch"
        style="@style/Widget.MyFitAI.SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/notifications_weekly_review"
        />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/aiBackgroundUpdatesSwitch"
        style="@style/Widget.MyFitAI.SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:text="@string/notifications_ai_background"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4"
        android:layout_marginTop="@dimen/space_2"
        style="@style/Text.MyFitAI.SettingsDescription"
        android:text="@string/notifications_ai_background_description"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MyFitAI.InputDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_12"
        android:hint="@string/notifications_lead_time"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/mealLeadInput"
            style="@style/Widget.MyFitAI.InputDropdownText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:contentDescription="@string/notifications_lead_time" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
